Lisätty uudet sivut: Lisätieto ja Goals. Kehitetty navigaatiota.

--- a/TreeniApp.csproj
+++ b/TreeniApp.csproj
@@ -63,4 +63,16 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="LisatietoPage.xaml.cs">
+	    <DependentUpon>LisatietoPage.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="LisatietoPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
