Yritetty lisätä userid suodatusta tavoitteisiin. Aloitettu tavoitteiden lisäys-toimintoa.

--- a/TreeniApp.csproj
+++ b/TreeniApp.csproj
@@ -73,6 +73,13 @@
 	  <MauiXaml Update="LisatietoPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="NewGoalPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="ViewModels\" />
 	</ItemGroup>
 
 </Project>
